Make a cool other webpage

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -34,5 +34,7 @@
     <a href="https://www.alxafrica.com" target="_blank"
       ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" >
     </a>
+    <!-- ✅ Link to tweets.html -->
+  <p><a href="tweets.html">See My Tweets →</a></p>
   </body>
 </html>
