Make a cool website

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,13 +6,29 @@
     <title>My_first_Portfolio</title>
   </head>
   <body>
-    <h1>Welcome to My First Webpage</h1>
+    <!-- ✅ Navigation Bar -->
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <h2>About This Page</h2>
+  <!-- ✅ Main Content -->
+    <main>
+    <article>
+    <h1>Welcome to My First Webpage</h1>
+    <h2>Getting Started with HTML</h2>
+    <h3>Practicing Basic Tags</h3>
+
     <p>
       This is my very first attempt at writing a complete HTML document. I'm
       excited to start this journey into web development!
     </p>
+    <p>This is the first paragraph of my awesome website.</p>
+    <p>I’m learning how to build semantic and accessible pages.</p>
+    <p>HTML is powerful and lightweight — perfect for structured content.</p>
+    <p>I'm also practicing how to embed media and link across pages.</p>
 
     <h3>What You Will Find Here</h3>
     <p>
@@ -36,5 +52,15 @@
     </a>
     <!-- ✅ Link to tweets.html -->
   <p><a href="tweets.html">See My Tweets →</a></p>
+  </article>
+  <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <!-- ✅ Footer -->
+  <footer>
+    <p>Made by Selam Mulugeta - <a href="https://github.com/selam199" target="_blank">here</a>.</p>
+  </footer>
   </body>
 </html>
