--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,6 +6,15 @@
     <title>My Tweets</title>
 </head>
 <body>
+   <!-- ✅ Navigation Bar -->
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  <main>
+    <article>
     <h1>My Embedded Tweet</h1>
 
   <!-- ✅ Embed a tweet (Replace this with any tweet you like from Twitter’s embed option) -->
@@ -18,6 +27,16 @@
 
   <!-- ✅ Link back to homepage -->
   <p><a href="index.html">← Back to Home</a></p>
+  </article>
+  <aside>
+      <p>placeholder to add comment thread later</p>
+  </aside>
+  </main>
+  <!-- ✅ Footer -->
+  <footer>
+    <p>Made by Selam Mulugeta - <a href="https://github.com/selam-mulugeta" target="_blank">here</a>.</p>
+  </footer>
+
 
 </body>
 </html>
