Add some level of creativity

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -52,6 +52,39 @@
     </a>
     <!-- ✅ Link to tweets.html -->
   <p><a href="tweets.html">See My Tweets →</a></p>
+  <!-- ✅ New section: Learner Table -->
+      <h2>Meet Some of Our Learners</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Selam</td>
+            <td>33</td>
+            <td>Ethiopia</td>
+          </tr>
+          <tr>
+            <td>Mulugeta</td>
+            <td>66</td>
+            <td>Ethiopia</td>
+          </tr>
+          <tr>
+            <td>Abebe</td>
+            <td>32</td>
+            <td>Ethiopia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
   </article>
   <aside>
       <p>placeholder to add comment thread later</p>
